--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,41 @@
    Media Queries
    ========================================================================== */
 
+@media only screen and (min-width: 1700px) and (max-width: 2000px) {
+	
+	.header{
+		padding-top: 234px;
+		padding-right: 0px;
+		padding-bottom: 210px;
+		padding-left: 0px;
+	}
+
+	.logo{
+		width: 350px;
+		margin-top: 0px;
+		margin-right: auto;
+		margin-bottom: 35px;
+		margin-left: auto;
+	}
+}
+
+
+@media only screen and (min-width: 1300px) and (max-width: 1699px) {
+	
+	.header{
+		padding-top: 150px;
+		padding-right: 0px;
+		padding-bottom: 98px;
+		padding-left: 0px;
+	}
+
+	.logo{
+		margin-top: 0px;
+		margin-right: auto;
+		margin-bottom: 35px;
+		margin-left: auto;
+	}
+}
 
 @media only screen and (min-width: 992px) {
 	/****Ipad Landscape 1024 Container 970 ****/
