--- a/css/responsive.css
+++ b/css/responsive.css
@@ -103,7 +103,16 @@
 	.featured-box p{ line-height:18px; }
 	.c-logo-part ul a{ margin-bottom:5px;}
 	.main-section.team{ padding:60px 0 50px;}
-	.business-talking h2{ font-size:36px;}
+	.business-talking h2{
+		 font-size:24px;
+		 margin-top: 0px;
+		 margin-right: 0px;
+		 margin-bottom: 15px;
+		 margin-left: 0px;
+		}
+		.business-talking{
+			padding:40px 0 10px;
+		}
 	.contact-info-box{ margin:0 0 12px 30px; font-size:12px;}
 	.contact-info-box span{ line-height:18px;}
 	.social-link{ margin-left:30px;} 
@@ -113,7 +122,7 @@
 	.main-section.contact{ padding:60px 0 70px}
 	.client-part-haead{ font-size:20px; line-height:30px;}
 	.link{ font-size:14px; padding:10px 25px;}
-	.logo{ width:100px;}
+	.logo{ width:175px;}
 	.main-section.contact{ background-size:contain;}
 	.Portfolio-nav li a{ padding:5px 16px;}
 	.Portfolio-nav li{ display:block;}
@@ -129,7 +138,7 @@
 @media only screen and (max-width: 479px) {
 	/****Mobile Portrait 320 ****/
 	.contact-info-box{ margin-left:0px;}
-	.header{ padding:40px;}
+	.header{ padding:60px 40px;}
 	.social-link{ margin-left:0px;}
 	.form{ margin:0}
 	.c-logo-part ul li{ display:block;}
